# shopping_assistant_backend

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AIOHTTP_COMPARISON.md  CLAUDE.md  Dockerfile  ENVIRONMENT_SETUP_DOCUMENTATION.md  README_proxy.md  analyze_failures.py  docker-bake.hcl  docker-compose.yml  gunicorn.conf.py  incus_server.py  pyproject.toml  requirements.txt  requirements_sglang.txt  server.py  start_proxy.sh  test_agent.py  test_aiohttp_proxy.py  test_proxy.py  test_proxy_async.py  ws.py
.claude/: settings.local.json
examples/: llm_example.py  run_qwen2.5-3b_gsm8k_multiturn.sh
examples/data_preprocess/: gsm8k_multiturn_w_tool.py
examples/sglang_multiturn/config/tool_config/: gsm8k_tool_config.yaml
notebooks/: playwright-test.ipynb  test.html
proxy/: cache.py  proxy.py  proxy_client.py  proxy_client_aiohttp.py  proxy_client_simple.py  proxy_direct.py  proxy_server.py  proxy_server_async.py  proxy_server_flask_async.py
rl_web_agent/: __init__.py  agent.py  config.py  config_store.py  env.py  evaluator.py  helper_functions.py  incus_client.py  llm.py  main.py  repl.py
rl_web_agent/conf/: config.yaml
rl_web_agent/entrypoints/: __init__.py  agent.py  batch_agent.py  repl.py  replay.py
rl_web_agent/javascript/: initscript.js  parser.js
rl_web_agent/prompts/: __init__.py  chain_of_thought.txt  fuzzy_match_evaluator.txt  ua_match_evaluator.txt
shopping_assistant/: config.example.py  converse.py  example_client.py  flask_server.py  requirements.txt  tool.py  tool_config.py
shopping_assistant/deprecated/: README.md  inject_chat.html  run_chat_server.py  start_chat_server.sh  system_prompt_baseline.txt  tool.py
shopping_assistant/deprecated/templates/: chat_interface.html  embed.js
shopping_assistant/prompts/: __init__.py  system_prompt.py  system_prompt.txt  system_prompt_baseline.txt  system_prompt_contrastive.txt  system_prompt_elicitation.txt  system_prompt_exploration.txt  system_prompt_test.txt  system_prompt_with_state.txt  update_conversation_state.txt
verl/tools/utils/: tool_registry.py
verl/trainer/config/: ppo_trainer.yaml
verl/utils/reward_score/: gsm8k.py
verl/workers/rollout/sglang_rollout/: sglang_rollout.py
