# -------------------------------
# build-system
# -------------------------------
[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0",
  "wheel",
]

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "rl_web_agent"
version = "0.1.0"

dependencies = [
  "datasets>=3.6.0",
  "hydra-core>=1.3.2",
  "dill>=0.3.8",
  "numpy>=1.26.4",
  "pandas>=2.3.0",
  "setuptools>=80.9.0",
  "pyarrow>=19.0.0",
  "pybind11>=2.13.6",
  "wandb>=0.20.1",
  "pip>=25.1.1",
  "ipython>=8.37.0",
  "ipykernel>=6.29.5",
  "boto3>=1.38.27",
  "aioboto3>=15.0.0",
  "flask>=3.1.1",
  "requests>=2.32.4",
  "httpx>=0.28.1",
  "dotenv>=0.9.9",
  "aioconsole>=0.8.1",
  "botocore>=1.38.27",
  "quart>=0.20.0",
  "requests-aws4auth>=1.3.1",
  "prompt-toolkit>=3.0.51",
  "openai>=1.86.0",
  "text-generation>=0.7.0",
  "playwright==1.53.0",
  "beartype>=0.12.0",
  "joblib>=1.5.2",
  "nltk>=3.9.1",
  "quart-cors>=0.8.0",
  "regex>=2025.9.1",
  "gunicorn>=23.0.0",
  "uvicorn>=0.35.0",
]
requires-python = ">=3.10"


# -------------------------------
# tool.ruff - Linting configuration
# -------------------------------
[tool.ruff]
# Note: While the formatter will attempt to format lines such that they remain within the line-length,
# it isn't a hard upper bound, and formatted lines may exceed the line-length.
line-length = 300 # TODO: Reduce this to a more reasonable value

[tool.ruff.lint]
isort = {known-first-party = ["verl"]}
# c.f. https://github.com/vllm-project/vllm/blob/ce8d6b75fc0586045df75ee1568a5b5f9957251b/pyproject.toml
ignore = [
  # star imports
  "F405",
  "F403", # lambda expression assignment
  "E731", # Loop control variable not used within loop body
  "B007", # f-string format
  "UP032", # Can remove once 3.10+ is the minimum Python version
  "UP007", # `.log()` statement uses f-string
  "G004",
]
select = [
  # pycodestyle
  "E", # Pyflakes
  "F", # pyupgrade
  "UP", # flake8-bugbear
  "B", # isort
  "I",
  "G",
]

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
# True means `setuptools` will attempt to include all relevant files in package_data automatically.
# This corresponds to `include_package_data=True` in setup.py.
include-package-data = true

# If you need to mimic `package_dir={'': '.'}`:
[tool.setuptools.package-dir]
"" = "."

# If you need to include specific non-Python data (like YAML files or version file):
# This is the rough equivalent of package_data={'': ['version/*'], 'verl': ['trainer/config/*.yaml']}
[tool.setuptools.package-data]
verl = [
  "version/*",
  "trainer/config/*.yaml",
]
